import { render, screen } from "@testing-library/react"
import userEvent from "@testing-library/user-event"
import { describe, expect, it, vi } from "vitest"
import { axe } from "../test/setup.ts"
import { Button } from "./button.tsx"

describe("Button", () => {
  describe("Rendering", () => {
    it("should render with children", () => {
      render(<Button>Click me</Button>)
      expect(screen.getByRole("button", { name: "Click me" })).toBeInTheDocument()
    })

    it("should render with custom className", () => {
      render(<Button className="custom-class">Click me</Button>)
      expect(screen.getByRole("button")).toHaveClass("custom-class")
    })
  })

  describe("Interaction", () => {
    it("should call onClick handler when clicked", async () => {
      const user = userEvent.setup()
      const handleClick = vi.fn()
      render(<Button onClick={handleClick}>Click me</Button>)

      await user.click(screen.getByRole("button"))
      expect(handleClick).toHaveBeenCalledTimes(1)
    })

    it("should not call onClick when disabled", async () => {
      const user = userEvent.setup()
      const handleClick = vi.fn()
      render(
        <Button onClick={handleClick} disabled>
          Click me
        </Button>
      )

      await user.click(screen.getByRole("button"))
      expect(handleClick).not.toHaveBeenCalled()
    })
  })

  describe("Button types", () => {
    it("should render as button type by default", () => {
      render(<Button>Click me</Button>)
      expect(screen.getByRole("button")).toHaveAttribute("type", "button")
    })

    it("should render as submit type when specified", () => {
      render(<Button type="submit">Submit</Button>)
      expect(screen.getByRole("button")).toHaveAttribute("type", "submit")
    })

    it("should render as reset type when specified", () => {
      render(<Button type="reset">Reset</Button>)
      expect(screen.getByRole("button")).toHaveAttribute("type", "reset")
    })
  })

  describe("Disabled state", () => {
    it("should be disabled when disabled prop is true", () => {
      render(<Button disabled>Click me</Button>)
      expect(screen.getByRole("button")).toBeDisabled()
    })

    it("should not be disabled when disabled prop is false", () => {
      render(<Button disabled={false}>Click me</Button>)
      expect(screen.getByRole("button")).not.toBeDisabled()
    })
  })

  describe("Ref forwarding", () => {
    it("should forward ref to button element", () => {
      const ref = { current: null as HTMLButtonElement | null }
      render(<Button ref={ref}>Click me</Button>)
      expect(ref.current).toBeInstanceOf(HTMLButtonElement)
    })
  })

  describe("Accessibility", () => {
    it("should have no accessibility violations", async () => {
      const { container } = render(<Button>Click me</Button>)
      const results = await axe(container)
      expect(results).toHaveNoViolations()
    })

    it("should have no accessibility violations when disabled", async () => {
      const { container } = render(<Button disabled>Click me</Button>)
      const results = await axe(container)
      expect(results).toHaveNoViolations()
    })

    it("should be keyboard accessible", async () => {
      const user = userEvent.setup()
      const handleClick = vi.fn()
      render(<Button onClick={handleClick}>Click me</Button>)

      const button = screen.getByRole("button")
      button.focus()
      expect(button).toHaveFocus()

      await user.keyboard("{Enter}")
      expect(handleClick).toHaveBeenCalledTimes(1)

      await user.keyboard(" ")
      expect(handleClick).toHaveBeenCalledTimes(2)
    })
  })
})
