// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > Rendering > should render when disabled 1`] = `
<div>
  <button
    class="base-Button-root base--disabled"
    disabled=""
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Button > Rendering > should render with children 1`] = `
<div>
  <button
    class="base-Button-root"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Button > Rendering > should render with custom className 1`] = `
<div>
  <button
    class="base-Button-root custom-class"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Button > Rendering > should render with different button types 1`] = `
<div>
  <button
    class="base-Button-root"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`Button > Rendering > should render with different button types 2`] = `
<div>
  <button
    class="base-Button-root"
    type="reset"
  >
    Reset
  </button>
</div>
`;
